# DataStructsAndAlgorithms

./: .clang-format  CMakeLists.txt  README.md  execute.sh  main.cpp
challenges/: DecimalNumber2Roman.cpp
challenges/ManageFilesNonSequentially/: database.cpp  database.h  main.cpp  personal.cpp  personal.h  student.cpp  student.h
src/: pointers.cpp  pointers2Functions.cpp  pointersAndArrays.cpp  pointersAndReferenceVariables.cpp  pointersAndStructs.cpp  vectorsAndAlgorithms.cpp
